<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".OrderSummaryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:id="@+id/textview_order_summary_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="65"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:paddingStart="5dp"
            android:paddingEnd="0dp"
            android:text="@string/order_summary_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textview_order_summary_order_id_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="17.5"
            android:fontFamily="sans-serif"
            android:gravity="bottom|start"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:paddingBottom="10dp"
            android:text="@string/order_summary_order_id_title"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textview_order_summary_order_id"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="17.5"
            android:fontFamily="sans-serif"
            android:gravity="bottom|end"
            android:paddingStart="0dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:text="@string/order_summary_order_id_placeholder"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="normal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:id="@+id/textview_order_summary_item_name_heading"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="45"
            android:gravity="center_vertical"
            android:text="@string/order_summary_item_name_heading"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textview_order_summary_item_quantity_heading"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:gravity="center_vertical"
            android:text="@string/order_summary_item_quantity_heading"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textview_order_summary_item_price_heading"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="30"
            android:gravity="center_vertical"
            android:text="@string/order_summary_item_price_heading"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ListView
        android:id="@+id/listview_order_summary"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="55"
        android:divider="@null"
        android:dividerHeight="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp" />

</LinearLayout>