<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="60"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:weightSum="100"
        app:layout_constraintEnd_toStartOf="@+id/guideline_order_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textview_menu_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:fontFamily="sans-serif"
            android:paddingStart="16dp"
            android:paddingTop="10dp"
            android:paddingEnd="0dp"
            android:text="@string/order_menu_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold" />

        <GridView
            android:id="@+id/gridview_item_menu"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="90"
            android:columnWidth="200dp"
            android:gravity="center"
            android:horizontalSpacing="14dp"
            android:numColumns="2"
            android:stretchMode="spacingWidthUniform"
            android:verticalSpacing="16dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40"
        android:orientation="vertical"
        android:weightSum="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_order_menu"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textview_order_preview_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:paddingStart="12dp"
            android:paddingTop="10dp"
            android:paddingEnd="0dp"
            android:text="@string/order_preview_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/listview_order_preview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="60"
            android:divider="@null"
            android:dividerHeight="12dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textview_order_preview_placeholder"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="60"
            android:gravity="center"
            android:text="@string/order_preview_placeholder"
            android:textAlignment="center"
            android:textSize="24sp"
            android:visibility="visible" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="12.5"
            android:paddingStart="12dp"
            android:paddingEnd="12dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_order_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.6" />

            <TextView
                android:id="@+id/textview_order_preview_total_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/order_preview_total_title_placeholder"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@id/guideline_order_total"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textview_order_preview_total"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/order_preview_total_placeholder"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline_order_total"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="12.5"
            android:paddingStart="10dp"
            android:paddingTop="8dp"
            android:paddingEnd="10dp"
            android:paddingBottom="8dp">

            <Button
                android:id="@+id/btn_order_cancel"
                android:layout_width="175dp"
                android:layout_height="0dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/btn_style_1"
                android:text="@string/btn_order_cancel_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_order_checkout"
                android:layout_width="175dp"
                android:layout_height="0dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/btn_style_1"
                android:text="@string/btn_order_checkout_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</LinearLayout>