<?xml version="1.0" encoding="utf-8"?>
<Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorGrayDark"
    android:elevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="100">

        <ImageButton
            android:id="@+id/btn_back_to_menu"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:background="@color/transparent"
            android:elevation="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/back_arrow" />

        <TextView
            android:id="@+id/textview_order_summary_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="80"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:text="@string/order_summary_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textview_order_summary_order_id_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:fontFamily="sans-serif"
            android:gravity="bottom|start"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:text="@string/order_summary_order_id_title"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textview_order_summary_order_id"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:fontFamily="sans-serif"
            android:gravity="bottom|end"
            android:paddingStart="0dp"
            android:paddingEnd="10dp"
            android:text="@string/order_summary_order_id_placeholder"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="normal" />

    </LinearLayout>

</Toolbar>