<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:background="@color/colorGrayDark"
        android:orientation="vertical"
        android:weightSum="10">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="125dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:src="@drawable/clipart_robot" />

        <TextView
            android:id="@+id/textview_login_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:gravity="top"
            android:text="@string/login_heading"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginTop="-100dp"
        android:layout_marginEnd="30dp"
        android:layout_weight="55"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:contentPaddingLeft="20dp"
        app:contentPaddingRight="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/textview_login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/login_title"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textview_login_email_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:labelFor="@+id/edittext_login_email"
                android:text="@string/label_email"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/edittext_login_email"
                app:layout_constraintTop_toBottomOf="@+id/textview_login_title" />

            <EditText
                android:id="@+id/edittext_login_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="12"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_login_email_label" />

            <TextView
                android:id="@+id/textview_login_pin_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:labelFor="@+id/edittext_login_pin"
                android:text="@string/label_pin"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/edittext_login_pin"
                app:layout_constraintTop_toBottomOf="@+id/edittext_login_email" />

            <EditText
                android:id="@+id/edittext_login_pin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="12"
                android:importantForAutofill="no"
                android:inputType="numberPassword"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_login_pin_label" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/btn_style_1"
                android:onClick="onLogin"
                android:paddingStart="24sp"
                android:paddingEnd="24sp"
                android:text="@string/btn_login"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edittext_login_pin" />

            <com.github.ybq.android.spinkit.SpinKitView
                android:id="@+id/progress"
                style="@style/SpinKitView.FadingCircle"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginTop="65dp"
                android:visibility="gone"
                app:SpinKit_Color="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_login_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>